2017-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el: Bind w3m-clear-display-while-reading, w3m-current-title.

2017-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	Allow local file of which the name is not absolute ([emacs-w3m:12643])

	* w3m.el (w3m-canonicalize-url): Allow local file of relative name.
	* w3m-util.el (w3m-popup-buffer): Preserve the current directory.

2017-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el (w3m-process-stop): Blank page if
	w3m-clear-display-while-reading is non-nil ([emacs-w3m:12633]).
	(w3m-process-kill-stray-processes): Separate it from
	w3m-process-start-queued-processes.

2017-02-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	Revert last change in w3m-decode-coding-string-with-priority.

	* w3m-util.el (w3m-decode-coding-string-with-priority): Revert.
	[emacs-w3m:12630]

2017-02-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	Don't use string-make-(multi|uni)byte that got obsolete in Emacs 26.

	* octet.el (w3m-about-octet-attachments, octet-w3m-region):
	Use (decode|encode)-coding-string.
	* w3m-image.el (w3m-imagick-convert-buffer): Bind LC_ALL with C.
	* w3m-proc.el (w3m-process-start-after):
	Bind LC_ALL with C in w3m-command-environment.
	* w3m-util.el (w3m-decode-coding-string-with-priority): Don't use it.
	(w3m-insert-string): Encode a string by utf-8-emacs when inserting it
	into a unibyte buffer.
	* w3m.el (w3m-command-environment): Bind LC_ALL with C.

2017-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-external-view-this-url, w3m-external-view-current-url)
	(w3m-view-url-with-external-browser):
	Don't make obsolete.  [emacs-w3m:12627]

2017-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-real-url): Preserve #name portion.  [emacs-w3m:12618]

2017-01-04  Kevin Ryde  <user42_kevin@yahoo.com.au>

	* w3m-save.el (w3m-save-buffer): Use w3m-expand-file-name-as-url for
	w3m-history-push in case filename ~/foo etc.  [emacs-w3m:12617]

2016-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>
